--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -9,7 +9,7 @@
 </head>
 <body style= "padding: 0; margin: 0;">
      <header style= "background-color: #FF0000; height: 70px; width: 100%;"></header>    
-     <footer style= "background-color: #00FF00; height: 60px; width: 100%; position: absolute;">
+     <footer style= "background-color: #00FF00; height: 60px; width: 100%; position: fixed;">
     <p>
         Best School
     </p>    
