--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -26,8 +26,13 @@
     </style>
 </head>
 <body>
+    <header>
+
+    </header>
+    <footer>
         <p>
             Best School
         </p>
+    </footer>
 </body>
 </html>
